# llp_lab3

client/: CMakeLists.txt  response.xsd
client/include/: network.h  xml.h
client/parser/bison+flex/: lexer.l  parser.y
client/parser/include/: printer.h  query.h
client/parser/src/: printer.c  query.c
client/src/: main.c  network.c  xml.c
server/: CMakeLists.txt  query.xsd
server/database/include/: database.h  file.h  graph.h  query.h
server/database/src/: database.c  file.c  graph.c  query.c
server/include/: executor.h  network.h  xml.h
server/src/: executor.c  main.c  network.c  xml.c
